<resources>
    <string name="app_name">tu tienda game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab">Home</string>
    <string name="ps4_tab">PS4</string>
    <string name="xbox_tab">Xbox</string>
    <string name="ofertas_tab">Ofertas</string>
    <string name="novedades_tab">Novedades</string>
    <string name="app_web">www.tiendavideojuegos.com</string>
    <string name="nd_home">Home</string>
    <string name="nd_calendar">Calendario Lanzamientos</string>
    <string name="nd_new">Novedades</string>
    <string name="nd_games">Juegos</string>
    <string name="nd_merchandising">Merchandising</string>
    <string name="nd_supportTitle">Soporte</string>
    <string name="nd_contact">Contact</string>
    <string name="nd_help">Help</string>
    <string name="map_tab">¿Dónde estamos?</string>
    <string name="contacto_tab">Contacto</string>
    <string name="reclamo_tab">Reclamar</string>
    <string name="carrito_tab">Carro de la compra</string>
    <string name="ofertas">Ofertas</string>

    <string-array name="xboxgames">
        <item>Halo</item>
        <item>Forza 4</item>
        <item>Sonic Mania</item>
    </string-array>
    <string-array name="ofertas">
        <item>God Of War</item>
        <item>Forza 3</item>
        <item>Spyro</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="ps4games">
        <item>NinoKuni II</item>
        <item>Shenmue</item>
        <item>Outcast</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_carrito">CarritoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>