<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nd_home"
            android:checked="true"/>
        <item
            android:id="@+id/navNovedades"
            android:icon="@android:drawable/btn_star"
            android:title="@string/novedades_tab" />
        <item
            android:id="@+id/navOfertas"
            android:icon="@android:drawable/btn_plus"
            android:title="@string/ofertas_tab" />
        <item
            android:id="@+id/navBikes"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/bike_tab"/>
        <item
            android:id="@+id/navCars"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/car_tab"/>
        <item
            android:id="@+id/navMap"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/map_tab"/>
        <item
            android:id="@+id/navContact"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/contacto_tab"/>
        <item
            android:id="@+id/navCompra"
            android:icon="@drawable/ic_shopping_cart_black_35dp"
            android:title="@string/carrito_tab"/>


    </group>

</menu>